--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -13,3 +13,11 @@ body.screen--md h1 {
   font-size: 3rem;
   line-height: 3rem;
 }
+body.screen--xs h2 {
+  font-size: 1rem;
+  line-height: 1rem;
+}
+body.screen--md h2 {
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+}
